--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,15 +1,16 @@
 ---
 layout: default
 title: Sobre mí
-hero_image: "/assets/img/sobre-mi-bg.jpg"
+hero_image: /assets/img/sobre-mi-bg.jpg
 subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 ---
 
 <section id="sobre-mi" class="py-5">
   <div class="container text-center">
-    <h2>Sobre mí</h2>
-    <p class="lead mt-3">Apasionada de la tecnología, el desarrollo web y la creación de proyectos innovadores. Siempre en busca de nuevos retos. ¡Me encanta construir experiencias únicas en Internet!</p>
-    <img src="/assets/img/foto-perfil.jpg" alt="Mi Foto" class="rounded-circle mt-4" style="width: 150px; height: 150px;">
+    <h2 class="mb-3">Sobre mí</h2>
+    <p class="lead">
+      Apasionada de la tecnología, el desarrollo web y la creación de proyectos innovadores. Siempre en busca de nuevos retos. ¡Me encanta construir experiencias únicas en Internet!
+    </p>
+    <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" alt="Mi Foto" class="rounded-circle mt-4" style="width: 150px; height: 150px;">
   </div>
 </section>
-  
