--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ---
 layout: default
 title: Bienvenido a Chispi Page
-hero_image: "/assets/img/index-bg.jpg"
+hero_image: /assets/img/index-bg.jpg
 ---
 
 <!-- Sección de presentación rápida -->
 <section class="py-5 bg-light text-center">
-    <div class="container">
-        <h2 class="fw-bold mb-4">¿Qué es Chispi Page?</h2>
-        <p class="lead mb-4">Es un espacio personal para compartir mis ideas, proyectos, devlogs, arte y más. ¡Un rincón creativo donde todo tiene lugar!</p>
-        <a href="{{ '/sobre-mi.html' | relative_url }}" class="btn btn-outline-verde-1 btn-lg mt-4">Conóceme más</a>
-        <a href="{{ '/contacto.html' | relative_url }}" class="btn btn-outline-verde-2 btn-lg mt-4">Contacto</a>
-        <a href="{{ '/posts.html' | relative_url }}" class="btn btn-outline-verde-3 btn-lg mt-4">Lee mi blogs</a>
-        <a href="{{ '/proyectos.html' | relative_url }}" class="btn btn-outline-verde-4 btn-lg mt-4">Ojea mis proyectos</a>
+  <div class="container">
+    <h2 class="fw-bold mb-4">¿Qué es Chispi Page?</h2>
+    <p class="lead mb-4">
+      Es un espacio personal para compartir mis ideas, proyectos, devlogs, arte y más. ¡Un rincón creativo donde todo tiene lugar!
+    </p>
+    
+    <div class="d-flex flex-wrap justify-content-center gap-3 mt-4">
+      <a href="{{ '/sobre-mi.html' | relative_url }}" class="btn btn-outline-verde-1 btn-lg">Conóceme más</a>
+      <a href="{{ '/contacto.html' | relative_url }}" class="btn btn-outline-verde-2 btn-lg">Contacto</a>
+      <a href="{{ '/posts.html' | relative_url }}" class="btn btn-outline-verde-3 btn-lg">Lee mis blogs</a>
+      <a href="{{ '/proyectos.html' | relative_url }}" class="btn btn-outline-verde-4 btn-lg">Ojea mis proyectos</a>
     </div>
-    </div>
+  </div>
 </section>
