--- a/gracias.html
+++ b/gracias.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: ¡Gracias!
-hero_image: "/assets/img/contacto-bg.jpg"
+hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
+hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
 
 <section class="py-5 text-center bg-light">
