--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Bienvenido a Chispi Page
-hero_image: /assets/img/index-bg.jpg
+hero_image_dark: "/assets/img/index-bg-dark.jpg"
+hero_image_light: "/assets/img/index-bg-light.jpg"
 ---
 
 <!-- Sección de presentación rápida -->
