--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Sobre mí
-hero_image: /assets/img/sobre-mi-bg.jpg
+hero_image_dark: "/assets/img/sobre-mi-bg-dark.jpg"
+hero_image_light: "/assets/img/sobre-mi-bg-light.jpg"
 subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 ---
 
