--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Contacto
-hero_image: "/assets/img/contacto-bg.jpg"
+hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
+hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
 
 <section id="contacto" class="py-5 bg-light">
