--- a/proyectos.html
+++ b/proyectos.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Proyectos
-hero_image: /assets/img/proyectos-bg.jpg
+hero_image_dark: "/assets/img/proyectos-bg-dark.jpg"
+hero_image_light: "/assets/img/proyectos-bg-light.jpg"
 ---
 
 <section id="proyectos" class="py-5 bg-light">
