corrección imágenes pags español

--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@ hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
 hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
 
-<section id="contacto" class="py-5 bg-light">
+<section id="contacto" class="py-5">
   <div class="container">
     <h2 class="text-center mb-4">Contacto</h2>
     <p class="lead text-center">¿Quieres ponerte en contacto conmigo? Rellena el formulario de abajo.</p>
