--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ hero_image_light: "/assets/img/index-bg-light.jpg"
 ---
 
 <!-- Sección de presentación rápida -->
-<section class="py-5 bg-light text-center">
+<section class="py-5 text-center">
   <div class="container">
     <h2 class="fw-bold mb-4">¿Qué es Chispi Page?</h2>
     <p class="lead mb-4">
