--- a/gracias.html
+++ b/gracias.html
@@ -5,7 +5,7 @@ hero_image_dark: "/assets/img/contacto-bg-dark.jpg"
 hero_image_light: "/assets/img/contacto-bg-light.jpg"
 ---
 
-<section class="py-5 text-center bg-light">
+<section class="py-5 text-center">
   <div class="container">
     <h2 class="fw-bold mb-4">¡Gracias por tu mensaje!</h2>
     <p class="lead mb-4">He recibido tu mensaje y me pondré en contacto contigo lo antes posible.</p>
