--- a/proyectos.html
+++ b/proyectos.html
@@ -5,7 +5,7 @@ hero_image_dark: "/assets/img/proyectos-bg-dark.jpg"
 hero_image_light: "/assets/img/proyectos-bg-light.jpg"
 ---
 
-<section id="proyectos" class="py-5 bg-light">
+<section id="proyectos" class="py-5">
   <div class="container">
     <h2 class="text-center mb-4">Proyectos</h2>
     <div class="row">
