--- a/_posts/2025-04-24-chispinotiondev01.html
+++ b/_posts/2025-04-24-chispinotiondev01.html
@@ -7,15 +7,32 @@ tags: ["GitHub"]
 slug: "chispinotiondev01"
 mood: ["Motivada"]
 issues: "1. Error en el tipo de propiedad de la sección “Estado” → Cambiar en el script la propiedad buscada \n 2. El contenido no se escribía en el archivo .md → Modificar script para que lea el texto del apartado, comentar la sección del script en el que se genera el contenido de forma dinámica \n"
-resources:  []
+resources: []
 projects: ["Chispi-DevLog"]
 publish: true
 status: "Publicado"
-hero_image_dark: "{{ site.baseurl }}/assets/img/posts/post-01.jpg"  # Aquí agregamos el campo de fondo
-hero_image_light: "{{ site.baseurl }}/assets/img/posts/post-01.jpg"  # Aquí agregamos el campo de fondo
+hero_image_dark: "{{ site.baseurl }}/assets/img/posts/post-01.jpg"
+hero_image_light: "{{ site.baseurl }}/assets/img/posts/post-01.jpg"
 ---
 
-Buenos días!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Iniciando el DevBlog - Semana 1</title>
+</head>
+<body>
+  <article>
+    <h1>Iniciando el DevBlog - Semana 1</h1>
+    <h2>Primera semana del DevBlog.\n Conecto Notion con mi blog y exporto mis posts automáticamente usando Python.</h2>
+    <p><strong>Fecha:</strong> 2025-04-24</p>
+    <p><strong>Estado de ánimo:</strong> Motivada</p>
+    <p><strong>Estado:</strong> Publicado</p>
+    <p><strong>Errores:</strong><br>1. Error en el tipo de propiedad de la sección “Estado” → Cambiar en el script la propiedad buscada \n 2. El contenido no se escribía en el archivo .md → Modificar script para que lea el texto del apartado, comentar la sección del script en el que se genera el contenido de forma dinámica \n</p>
+    <p><strong>Recursos:</strong><br></p>
+    <p><strong>Proyectos:</strong> Chispi-DevLog</p>
+    <hr>
+    <div>Buenos días!
 
 Soy Cristina Fuentes, analista de datos y bióloga. He creado este Blog para poder tener un seguimiento de mis avances en programación y análisis de datos 😉 
 
@@ -35,4 +52,7 @@ Y de momento esto es todo por hoy.
 
 Un amable saludo y nos vemos en la próxima entrada. 
 
-Cristina
+Cristina</div>
+  </article>
+</body>
+</html>
