--- a/_posts/2025-04-26-chispinotiondev03.html
+++ b/_posts/2025-04-26-chispinotiondev03.html
@@ -7,15 +7,32 @@ tags: ["GitHub"]
 slug: "chispinotiondev03"
 mood: ["Orgullosa", "Motivada"]
 issues: ""
-resources:  ["https://github.com/startbootstrap/startbootstrap-clean-blog-jekyll"]
+resources: ["https://github.com/startbootstrap/startbootstrap-clean-blog-jekyll"]
 projects: ["Chispi-DevLog"]
 publish: true
 status: "Publicado"
-hero_image_dark: "{{ site.baseurl }}/assets/img/posts/post-03.jpg"  # Aquí agregamos el campo de fondo
-hero_image_light: "{{ site.baseurl }}/assets/img/posts/post-03.jpg"  # Aquí agregamos el campo de fondo
+hero_image_dark: "{{ site.baseurl }}/assets/img/posts/post-03.jpg"
+hero_image_light: "{{ site.baseurl }}/assets/img/posts/post-03.jpg"
 ---
 
-Feliz sábado!!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Blog bonito - Semana 1</title>
+</head>
+<body>
+  <article>
+    <h1>Blog bonito - Semana 1</h1>
+    <h2>Avances en la página del blog. \n Utilizar una plantilla de Bootstrap para que el blog quede más estético.</h2>
+    <p><strong>Fecha:</strong> 2025-04-26</p>
+    <p><strong>Estado de ánimo:</strong> Orgullosa, Motivada</p>
+    <p><strong>Estado:</strong> Publicado</p>
+    <p><strong>Errores:</strong><br></p>
+    <p><strong>Recursos:</strong><br>https://github.com/startbootstrap/startbootstrap-clean-blog-jekyll</p>
+    <p><strong>Proyectos:</strong> Chispi-DevLog</p>
+    <hr>
+    <div>Feliz sábado!!
 
 Hoy no iba a trabajar en proyectos porque es fin de semana, pero al final me pudieron las ganas de lograr avances en el aspecto del blog y acabé poniéndome en marcha.
 
@@ -27,4 +44,7 @@ Espero que disfrutéis de lo que queda de semana y nos vemos en el próximo post
 
 Un amable saludo.
 
-Cristina
+Cristina</div>
+  </article>
+</body>
+</html>
