--- a/_posts/2025-05-02-chispinotiondev04.html
+++ b/_posts/2025-05-02-chispinotiondev04.html
@@ -7,15 +7,32 @@ tags: ["GitHub", "APIs", "SQL", "JavaScript"]
 slug: "chispinotiondev04"
 mood: ["Orgullosa"]
 issues: ""
-resources:  []
+resources: []
 projects: ["Chispi-DevLog"]
 publish: true
 status: "Publicado"
-hero_image_dark: "{{ site.baseurl }}/assets/img/posts/Ciencia_educacin_y_tecnologa_conectadas.png"  # Aquí agregamos el campo de fondo
-hero_image_light: "{{ site.baseurl }}/assets/img/posts/Ciencia_educacin_y_tecnologa_conectadas.png"  # Aquí agregamos el campo de fondo
+hero_image_dark: "{{ site.baseurl }}/assets/img/posts/Ciencia_educacin_y_tecnologa_conectadas.png"
+hero_image_light: "{{ site.baseurl }}/assets/img/posts/Ciencia_educacin_y_tecnologa_conectadas.png"
 ---
 
-Buenas tardes!!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Avances en la página - Semana 2</title>
+</head>
+<body>
+  <article>
+    <h1>Avances en la página - Semana 2</h1>
+    <h2>Creando una página con partículas, temas e idiomas</h2>
+    <p><strong>Fecha:</strong> 2025-05-02</p>
+    <p><strong>Estado de ánimo:</strong> Orgullosa</p>
+    <p><strong>Estado:</strong> Publicado</p>
+    <p><strong>Errores:</strong><br></p>
+    <p><strong>Recursos:</strong><br></p>
+    <p><strong>Proyectos:</strong> Chispi-DevLog</p>
+    <hr>
+    <div>Buenas tardes!!
 
 Espero que hayáis tenido una gran semana a pesar del apagón en España, después de todo, esta semana ha sido extra-corta.
 
@@ -29,4 +46,7 @@ Espero que nos volvamos a ver pronto!!
 
 Un amable saludo.
 
-Cristina Fuentes
+Cristina Fuentes</div>
+  </article>
+</body>
+</html>
