--- a/_posts/2025-04-25-chispinotiondev02.html
+++ b/_posts/2025-04-25-chispinotiondev02.html
@@ -1,5 +1,6 @@
 ---
-layout: post                            
+layout: post
+hide_header: true                            
 title: "Primer viernes - Semana 1"
 subtitle: "Trabajando con el Blog. \n Cambiando el aspecto de la página"
 date: 2025-04-25
