--- a/_posts/2025-04-26-chispinotiondev03.html
+++ b/_posts/2025-04-26-chispinotiondev03.html
@@ -1,5 +1,6 @@
 ---
-layout: post                            
+layout: post
+hide_header: true                            
 title: "Blog bonito - Semana 1"
 subtitle: "Avances en la página del blog. \n Utilizar una plantilla de Bootstrap para que el blog quede más estético."
 date: 2025-04-26
