--- a/_posts/2025-05-02-chispinotiondev04.html
+++ b/_posts/2025-05-02-chispinotiondev04.html
@@ -1,5 +1,6 @@
 ---
-layout: post                            
+layout: post
+hide_header: true                            
 title: "Avances en la página - Semana 2"
 subtitle: "Creando una página con partículas, temas e idiomas"
 date: 2025-05-02
