--- a/_posts/2025-04-24-chispinotiondev01.html
+++ b/_posts/2025-04-24-chispinotiondev01.html
@@ -1,5 +1,6 @@
 ---
-layout: post                            
+layout: post
+hide_header: true                            
 title: "Iniciando el DevBlog - Semana 1"
 subtitle: "Primera semana del DevBlog.\n Conecto Notion con mi blog y exporto mis posts automáticamente usando Python."
 date: 2025-04-24
