Update about me

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -7,58 +7,60 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 ---
 
 <section id="sobre-mi" class="py-5">
-  <div class="container text-center">
-    <h2 class="mb-3">🧑‍💻 Sobre mí</h2>
+  <div class="container max-w-4xl mx-auto px-4">
+    <div class="flex flex-col md:flex-row items-center gap-6">
+      <img src="/assets/img/foto-perfil.jpg" alt="Foto de Cristina" class="w-40 h-40 object-cover rounded-full shadow-md">
+      <div>
+        <h2 class="text-3xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
+        <p class="text-left">👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
+      </div>
+    </div>
 
-    <p>👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi GitHub!</p>
+    <div class="mt-6 text-left space-y-4">
+      <p>👩‍🔬 <strong>Bióloga y exprofesora</strong> orientada al <strong>análisis de datos</strong>. Me especializo en:</p>
+      <ul class="list-disc list-inside">
+        <li>📊 <strong>Python, Pandas, SQL</strong></li>
+        <li>📄 <strong>LaTeX, Pandoc</strong></li>
+        <li>📈 <strong>Matplotlib, Seaborn, Power BI</strong></li>
+      </ul>
 
-    <p>👩‍🔬 <strong>Bióloga y exprofesora de matemáticas y ciencias</strong> desarrollándose en el campo del <strong>análisis de datos</strong>, apasionada por la tecnología y la solución de desafíos. Me especializo en:</p>
-    <ul class="list-unstyled">
-      <li>📊 <strong>Análisis de Datos:</strong> Python, Pandas, SQL</li>
-      <li>📄 <strong>Automatización de Documentos:</strong> LaTeX, Pandoc</li>
-      <li>📈 <strong>Visualización:</strong> Matplotlib, Seaborn, Power BI</li>
-    </ul>
+      <p>🍀 Graduada del bootcamp de <strong>IMMUNE Institute</strong>:</p>
+      <ul class="list-disc list-inside">
+        <li>Machine Learning</li>
+        <li>Visualización de Datos</li>
+        <li>Análisis Avanzado</li>
+      </ul>
 
-    <p>🍀 Terminé el <strong>Bootcamp de Análisis de Datos en IMMUNE Institute</strong>, donde adquirí experiencia en:</p>
-    <ul class="list-unstyled">
-      <li>Machine Learning</li>
-      <li>Visualización de Datos</li>
-      <li>Análisis Avanzado</li>
-    </ul>
+      <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
 
-    <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una perspectiva única y creativa a los proyectos basados en datos.</p>
+      <h3 class="text-xl font-semibold mt-6">🔧 Habilidades</h3>
+      <div class="flex flex-wrap gap-2">
+        <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
+        <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
+        <img src="https://img.shields.io/badge/-HTML-pink" alt="HTML">
+        <img src="https://img.shields.io/badge/-CSS-green" alt="CSS">
+        <img src="https://img.shields.io/badge/-R-red" alt="R">
+      </div>
 
-    <h3 class="mt-5">🔧 Habilidades</h3>
-    <p><strong>Lenguajes de Programación:</strong><br>
-      <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
-      <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
-      <img src="https://img.shields.io/badge/-HTML-pink" alt="HTML">
-      <img src="https://img.shields.io/badge/-CSS-green" alt="CSS">
-      <img src="https://img.shields.io/badge/-R-red" alt="R">
-    </p>
-    <p><strong>Frameworks:</strong> Pandas, NumPy, SciPy, Matplotlib, Pytest, scikit-learn, Seaborn</p>
-    <p><strong>Herramientas de Visualización:</strong> Power BI, Tableau</p>
-    <p><strong>Herramientas de Desarrollo:</strong> LaTeX, Pandoc, Jupyter Notebook, Google Colab, Git, Anaconda</p>
-    <p><strong>Bases de Datos:</strong> MySQL, OracleSQL</p>
+      <h3 class="text-xl font-semibold mt-6">🖥️ Tecnologías Principales</h3>
+      <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
+      <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
 
-    <h3 class="mt-5">🖥️ Tecnologías Principales</h3>
-    <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
-    <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
+      <h3 class="text-xl font-semibold mt-6">🔥 ¿Qué estoy haciendo ahora?</h3>
+      <ul class="list-disc list-inside">
+        <li>💻 Modelado de datos y dashboards interactivos.</li>
+        <li>📖 NetworkX para análisis de redes sociales.</li>
+        <li>🤝 Abierta a colaboraciones.</li>
+      </ul>
 
-    <h3 class="mt-5">🔥 ¿Qué estoy haciendo ahora?</h3>
-    <ul class="list-unstyled">
-      <li>💻 Mejorando mis habilidades en <strong>modelado de datos y dashboards interactivos</strong>.</li>
-      <li>📖 Aprendiendo sobre análisis de redes sociales con <strong>NetworkX</strong>.</li>
-      <li>🤝 Disponible para colaboraciones en proyectos relacionados con análisis de datos o automatización.</li>
-    </ul>
-
-    <h3 class="mt-5">🎉 Curiosidades Sobre Mí</h3>
-    <ul class="list-unstyled">
-      <li>🎮 Viciada de los juegos de gestión de recursos con más de <strong>500 horas en Stardew Valley</strong>.</li>
-      <li>✈️ Antigua <strong>especialista de soporte en Riot Games</strong>.</li>
-      <li>🐶 Amante de los perros con dos bebotas en casa llamadas <strong>Riven</strong> y <strong>Haru</strong>.</li>
-      <li>🎨 Mañosa con las agujas de tejer y diseño de uñas.</li>
-      <li>🌍 Estudiando japonés para cumplir uno de mis sueños, ¡visitar <strong>Kumamoto</strong>! (Hogar de las estatuas de One Piece).</li>
-    </ul>
+      <h3 class="text-xl font-semibold mt-6">🎉 Curiosidades Sobre Mí</h3>
+      <ul class="list-disc list-inside">
+        <li>🎮 500+ horas en Stardew Valley</li>
+        <li>✈️ Soporte en Riot Games</li>
+        <li>🐶 Mis perras: <strong>Riven</strong> y <strong>Haru</strong></li>
+        <li>🎨 Diseñadora de uñas y tejedora</li>
+        <li>🌍 Aprendiendo japonés para visitar <strong>Kumamoto</strong></li>
+      </ul>
+    </div>
   </div>
 </section>
