--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -9,9 +9,11 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 <section id="sobre-mi" class="py-5">
   <div class="container max-w-4xl mx-auto px-4">
     <div class="flex flex-col md:flex-row items-center gap-6">
-      <img src="/assets/img/foto-perfil.jpg" alt="Foto de Cristina" class="w-40 h-40 object-cover rounded-full shadow-md">
+      <img src="{{ '/assets/img/foto-perfil.jpg' | relative_url }}" 
+          alt="Foto de Cristina"
+          class="w-40 h-40 object-cover rounded-full shadow-lg border-4 border-verde-1 hover:scale-105 transition-transform duration-300">
       <div>
-        <h2 class="text-3xl font-bold mb-2">🧑‍💻 Sobre mí</h2>
+        <h2 class="text-3xl font-bold mb-4 mt-6">🧑‍💻 Sobre mí</h2>
         <p class="text-left">👋 Soy Cristina (mis compañeros suelen llamarme Chispi). ¡Bienvenidos a mi Página!</p>
       </div>
     </div>
@@ -33,7 +35,7 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
 
       <p>👀 Mi formación en <strong>bioquímica y educación</strong> me permite aportar una mirada única.</p>
 
-      <h3 class="text-xl font-semibold mt-6">🔧 Habilidades</h3>
+      <h3 class="text-xl font-semibold mt-10 mb-3">🔧 Habilidades</h3>
       <div class="flex flex-wrap gap-2">
         <img src="https://img.shields.io/badge/-Python-blue" alt="Python">
         <img src="https://img.shields.io/badge/-SQL-orange" alt="SQL">
@@ -42,18 +44,18 @@ subtitle: "Desarrolladora | Diseñadora | Creadora de contenido"
         <img src="https://img.shields.io/badge/-R-red" alt="R">
       </div>
 
-      <h3 class="text-xl font-semibold mt-6">🖥️ Tecnologías Principales</h3>
+      <h3 class="text-xl font-semibold mt-10 mb-3">🖥️ Tecnologías Principales</h3>
       <img src="https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white" alt="Python">
       <img src="https://img.shields.io/badge/-LaTeX-008080?logo=latex&logoColor=white" alt="LaTeX">
 
-      <h3 class="text-xl font-semibold mt-6">🔥 ¿Qué estoy haciendo ahora?</h3>
+      <h3 class="text-xl font-semibold mt-10 mb-3">🔥 ¿Qué estoy haciendo ahora?</h3>
       <ul class="list-disc list-inside">
         <li>💻 Modelado de datos y dashboards interactivos.</li>
         <li>📖 NetworkX para análisis de redes sociales.</li>
         <li>🤝 Abierta a colaboraciones.</li>
       </ul>
 
-      <h3 class="text-xl font-semibold mt-6">🎉 Curiosidades Sobre Mí</h3>
+      <h3 class="text-xl font-semibold mt-10 mb-3">🎉 Curiosidades Sobre Mí</h3>
       <ul class="list-disc list-inside">
         <li>🎮 500+ horas en Stardew Valley</li>
         <li>✈️ Soporte en Riot Games</li>
