--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@ layout: default
 title: Bienvenido a Chispi Page
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
+hide_header: true
 ---
 
-<section class="hero-section py-5">
-  <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-4">
-    
-    <!-- Texto principal -->
-    <div class="text-md-start text-center flex-grow-1">
-      <h1 class="fw-bold display-4 mb-3">¡Hola! Soy <span class="text-verde-1">Chispi</span></h1>
-      <p class="text-muted fst-italic">Desarrolladora | Analista de Datos | Creadora de contenido</p>
-      <p class="lead mb-4">
-        Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más.
-      </p>
+<header class="hero d-flex align-items-center text-center text-white"
+  data-img-dark="{{ page.hero_image_dark | relative_url }}"
+  data-img-light="{{ page.hero_image_light | relative_url }}"
+  style="min-height: 100vh; position: relative;">
 
-      <div class="d-flex flex-wrap gap-3 justify-content-md-start justify-content-center">
-        <a href="{{ '/sobre-mi.html' | relative_url }}" class="btn btn-outline-verde-1 btn-lg">Conóceme más</a>
-        <a href="{{ '/proyectos.html' | relative_url }}" class="btn btn-outline-verde-4 btn-lg">Ojea mis proyectos</a>
-        <a href="{{ '/posts.html' | relative_url }}" class="btn btn-outline-verde-3 btn-lg">Lee mis blogs</a>
-        <a href="{{ '/contacto.html' | relative_url }}" class="btn btn-outline-verde-2 btn-lg">Contacto</a>
-      </div>
-    </div>
+  <div id="particles-js"
+       style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
 
-    <!-- Imagen o avatar -->
-    <div class="hero-image text-center">
-      <img src="/assets/img/perfil-Chispi.png" alt="Avatar de Chispi" class="img-fluid rounded-circle shadow-lg" style="max-width: 200px;">
+  <div class="container px-4 px-lg-5 d-flex flex-column align-items-center justify-content-center gap-4"
+       style="position: relative; z-index: 2; max-width: 800px;">
+
+    <img src="/assets/img/perfil-Chispi.png" alt="Avatar de Chispi"
+         class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3"
+         style="width: 150px; height: 150px; object-fit: cover;">
+
+    <h1 class="display-3 fw-bold">¡Hola! Soy <span class="text-verde-1">Chispi</span></h1>
+    <p class="lead fst-italic">Desarrolladora | Analista de Datos | Creadora de contenido</p>
+    <p class="lead mb-4">
+      Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más.
+    </p>
+
+    <div class="d-flex flex-wrap gap-3 justify-content-center">
+      <a href="{{ '/sobre-mi.html' | relative_url }}" class="btn btn-outline-verde-1 btn-lg">Conóceme más</a>
+      <a href="{{ '/proyectos.html' | relative_url }}" class="btn btn-outline-verde-4 btn-lg">Ojea mis proyectos</a>
+      <a href="{{ '/posts.html' | relative_url }}" class="btn btn-outline-verde-3 btn-lg">Lee mis blogs</a>
+      <a href="{{ '/contacto.html' | relative_url }}" class="btn btn-outline-verde-2 btn-lg">Contacto</a>
     </div>
 
   </div>
-</section>
-
+</header>
