--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ hide_header: true
   <div class="container px-4 px-lg-5 d-flex flex-column align-items-center justify-content-center gap-4"
        style="position: relative; z-index: 2; max-width: 800px;">
 
-    <img src="/assets/img/perfil-Chispi.png" alt="Avatar de Chispi"
+    <img src="{{ '/assets/img/perfil-Chispi.png' | relative_url }}" alt="Avatar de Chispi"
          class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3"
          style="width: 150px; height: 150px; object-fit: cover;">
 
