--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@ hero_image_light: "/assets/img/index-bg-light.jpg"
 hide_header: true
 ---
 
-<header class="hero d-flex align-items-center text-center text-white"
+<header class="hero d-flex align-items-center justify-content-center text-center"
   data-img-dark="{{ page.hero_image_dark | relative_url }}"
-  data-img-light="{{ page.hero_image_light | relative_url }}"
-  style="min-height: 100vh; position: relative;">
+  data-img-light="{{ page.hero_image_light | relative_url }}">
 
   <div id="particles-js"
        style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
