--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ hide_header: true
 ---
 
 <header class="hero d-flex align-items-center justify-content-center text-center"
-  data-img-dark="{{ page.hero_image_dark | relative_url }}"
-  data-img-light="{{ page.hero_image_light | relative_url }}">
+        data-img-dark="{{ page.hero_image_dark | relative_url }}"
+        data-img-light="{{ page.hero_image_light | relative_url }}">
 
   <div id="particles-js"
        style="position: absolute; width: 100%; height: 100%; z-index: 0;"></div>
 
   <div class="container px-4 px-lg-5 d-flex flex-column align-items-center justify-content-center gap-4"
-       style="position: relative; z-index: 2; max-width: 800px;">
+       style="position: relative; z-index: 2;">
 
     <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
          class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3"
