--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ hide_header: true
     class="position-absolute top-0 start-0 w-100 h-100; width: 100%; height: 100%; z-index: 0;"></div>
 
   <!-- Contenido centrado -->
-  <div class="position-relative z-1 d-flex align-items-center justify-content-center h-100">
+  <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
     <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
         class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3"
         style="width: 150px; height: 150px; object-fit: cover;">
