--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ hero_image_light: "/assets/img/index-bg-light.jpg"
 hide_header: true
 ---
 
-<header class="hero d-flex align-items-center justify-content-center text-center"
+<header class="hero d-flex flex-column align-items-center justify-content-center text-center"
   data-img-dark="{{ page.hero_image_dark | default: '/assets/img/hero-bg-dark.jpg' | relative_url }}"
   data-img-light="{{ page.hero_image_light | default: '/assets/img/hero-bg-light.jpg' | relative_url }}">
   
   <div id="particles-js" 
-    class="position-absolute top-0 start-0 w-100 h-100; width: 100%; height: 100%; z-index: 0;"></div>
-
+    class="position-absolute top-0 start-0 w-100 h-100"
+    style="z-index: 0;"></div>
   <!-- Contenido centrado -->
   <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
     <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
