--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ hero_image_light: "/assets/img/index-bg-light.jpg"
 hide_header: true
 ---
 
-<header class="hero d-flex flex-column align-items-center justify-content-center text-center"
+<header class="hero d-flex flex-column align-items-center justify-content-center text-center" 
+  style="min-height: 100vh;"
   data-img-dark="{{ page.hero_image_dark | default: '/assets/img/hero-bg-dark.jpg' | relative_url }}"
   data-img-light="{{ page.hero_image_light | default: '/assets/img/hero-bg-light.jpg' | relative_url }}">
   
