--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ hide_header: true
 
   <!-- Contenido centrado -->
   <div class="container px-4 px-lg-5" style="position: relative; z-index: 2;">
-    <div class="bg-dark bg-opacity-50 p-4 rounded text-white">
+    <div class="hero-box p-4 rounded">
       <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
-        class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3"
-        style="width: 150px; height: 150px; object-fit: cover;">
+        class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
+        style="width: 120px; height: 120px; object-fit: cover;">
       <h1 class="display-3 fw-bold">¡Hola! Soy <span class="text-verde-1">Chispi</span></h1>
       <p class="lead fst-italic">Desarrolladora | Analista de Datos | Creadora de contenido</p>
       <p class="lead mb-4">
