--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ hide_header: true
     style="z-index: 0;"></div>
 
   <!-- Contenido centrado -->
-  <div class="container px-4 px-lg-5" style="position: relative; z-index: 2;">
-    <div class="hero-box p-4 rounded">
+  <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
+    <div class="text-box">
       <img src="{{ '/assets/img/perfil-Chispi.jpg' | relative_url }}" alt="Avatar de Chispi"
         class="rounded-circle shadow-lg border border-4 border-verde-1 mb-3 mx-auto d-block"
         style="width: 120px; height: 120px; object-fit: cover;">
